install/manifests/base/https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-app-https-redirect
  namespace: demo-app
spec:
  parentRefs:
    - name: public
      namespace: gateways
      sectionName: http
  hostnames:
    - demo-app.american-broomstick.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
