install/manifests/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-app
  namespace: demo-app
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: demo-app
      sectionName: https
  hostnames:
    - demo-app.american-broomstick.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-app
          port: 80
